--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ authors = ["marmalade <summit@tutanota.de>"]
 [dependencies]
 serenity = "0.4"
 yaml-rust = "0.4"
+bson = "0.10.0"
+mongodb = { version = "0.3.7", features = ["ssl"] }
